# OS-Lab-3

./: CMakeLists.txt  build.cmd  build.sh  counter.c  counter.h  counter_daughter.c
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  counter  counter_daughter
